# boilerplate_wagtail

./: .gitignore  README.md  README_CIURANS.md  package-lock.json  package.json  pyproject.toml  tox.ini  webpack.config.js
.github/workflows/: main.yml
docker/: Dockerfile  docker-compose.yml  preproduction.yml
docker/nginx.conf/: site-develop.conf
docker/settings/: settings.env.example
src/apps/base/: middlewares.py  models.py  redirect_middleware.py  views.py  wagtail_hooks.py
src/apps/base/fixtures/: content.json  (+2 more)
src/apps/blog/: models.py
src/apps/cms_api/: apps.py  serializers.py  urls.py  views.py
src/apps/cms_site/: apps.py  blocks.py  forms.py  models.py  wagtail_hooks.py
src/apps/examples/: blocks.py  models.py
src/apps/home/: models.py
src/apps/users/: models.py
src/apps/wagtail_ajax_contact_form/: README.md  apps.py  forms.py  models.py  wagtail_hooks.py
src/assets/js/: ajax.js  api.js  index-bundle.js  scripts.js
src/assets/styles/: styles.css  styles.css.map
src/conf/: settings.py  testing.py  urls.py
src/templates/: base.html  baseOld.html
src/templates/blog/: index.html  post.html
src/templates/cms_site/: collection.html  home.html
src/templates/components/: block_text_center.html  block_text_left.html  block_text_right.html  heading.html  main_menu.html
src/templates/elements/: nav.html  product_card.html  project_card.html  social.html
src/templates/pages/: about_us.html  collection_base.html  collection_detail.html  contact.html  contact_ajax.html  custom_project.html  custom_projects_page.html  home.html  legal.html  news.html  project_detail.html  project_list.html
tests/: test_demo.py
tests/factories/: users.py
(+160 files in other folders)
